--- a/index.html
+++ b/index.html
@@ -13,9 +13,44 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="msapplication-config" content="./images/favicon.ico/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
+  <link rel="stylesheet" href="styles.css">
   <title>J.F Web Studio</title>
 </head>
 <body>
-  
+  <div class="page">
+    <header>
+      <div class="headLeft">
+        <img src="/images/LogoLightBlue.png" alt="Logo">
+        <h2 class="title">Web Studio</h2>
+      </div>
+      <nav>
+        <a href="">About Us</a>
+        <a href="">Our Work</a>
+        <a href="">Our Faces</a>
+        <a href="">Contact</a>
+        <a href="mailto:joshua.mclelland2@yahoo.com">Book A Kick Off</a>
+      </nav>
+    </header>
+    <main>
+      <div class="banner">
+
+      </div>
+      <div class="about">
+
+      </div>
+      <div class="work">
+
+      </div>
+      <div class="faces">
+
+      </div>
+      <div class="contact">
+
+      </div>
+    </main>
+    <footer>
+
+    </footer>
+  </div>
 </body>
 </html>
