--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="page">
     <header>
       <div class="headLeft">
-        <img src="/images/LogoLightBlue.png" alt="Logo">
+        <img src="./images/LogoLightBlue.png" alt="Logo">
         <h2 class="title">Web Studio</h2>
       </div>
       <nav>
