Head and banner

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
     <header>
       <div class="headLeft">
         <img src="images/LogoLightBlue.png" alt="Logo">
-        <h2 class="title">Web Studio</h2>
+        <h2 class="title">Web <strong>Studio</strong></h2>
       </div>
       <nav>
-        <a href="">About Us</a>
-        <a href="">Our Work</a>
-        <a href="">Our Faces</a>
-        <a href="">Contact</a>
-        <a href="mailto:joshua.mclelland2@yahoo.com">Book A Kick Off</a>
+        <a href="#">About Us</a>
+        <a href="#">Our Work</a>
+        <a href="#">Our Faces</a>
+        <a href="#">Contact</a>
+        <a class="kickoff" href="mailto:joshua.mclelland2@yahoo.com">Book A Kick Off</a>
       </nav>
     </header>
     <main>
       <div class="banner">
-
+        <h1>Connecting you to the world wide web!</h1>
       </div>
       <div class="about">
 
