About Us Section

--- a/index.html
+++ b/index.html
@@ -36,10 +36,18 @@
         <h1>Connecting you to the world wide web!</h1>
       </div>
       <div class="about">
-
+          <h2 class="title us">About Us</h2>
+          <p class="weAre">We are a network of freelance developers dedicated to delivering high-end clean cut websites. 
+          <br>
+          We offer <strong>END TO END</strong>  means in web design and development. So anything web we've got you covered!
+          <br>
+          <br>
+          We are <strong>BIG</strong> on customer care. Making sure we stay intouch throughout a projects timeline, making sure you are happy with the work. This is key to creating something truely unique and eyecatching for your buisness or portfolio. 
+          </p>
+          <p class="weCreate"><strong>We manage. We Change. We create</strong></p>
       </div>
       <div class="work">
-
+        <h2 class="title">Our Work</h2>
       </div>
       <div class="faces">
 
