--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="msapplication-config" content="./images/favicon.ico/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <title>J.F Web Studio</title>
 </head>
 <body>
@@ -32,7 +32,7 @@
       </nav>
     </header>
     <main>
-      <div class="banner">
+      <div class="banner pageitem">
         <h1>Connecting you to the world wide web!</h1>
       </div>
       <div class="about">
@@ -42,17 +42,30 @@
           We offer <strong>END TO END</strong>  means in web design and development. So anything web we've got you covered!
           <br>
           <br>
-          We are <strong>BIG</strong> on customer care. Making sure we stay intouch throughout a projects timeline, making sure you are happy with the work. This is key to creating something truely unique and eyecatching for your buisness or portfolio. 
+          We are <strong>BIG</strong> on customer care. We like to stay intouch throughout a projects timeline, making sure you are happy with the work. This is key to creating something truely unique and eyecatching for your buisness or portfolio. 
           </p>
-          <p class="weCreate"><strong>We manage. We Change. We create</strong></p>
+          <p class="weCreate"><strong>We Manage. <br>
+          We Change.
+          <br>
+          We Create.</strong>
+          </p>
       </div>
-      <div class="work">
+      <div class="work pageitem">
         <h2 class="title">Our Work</h2>
+        <p>We haven't got much to look at, at this moment in time! Here are some snapshots of a previous website we devloped with OCD Studio for a company called <a href="https://nubreedhotels.com/" target="_blank"  rel="noreferrer noopener">Nubreed Hotels. </a>(Click the link to see the full site.)</p>
+        <div class="workimages">
+          <img src="" alt="" class="workitem">
+          <img src="" alt="" class="workitem">
+          <img src="" alt="" class="workitem">
+          <img src="" alt="" class="workitem">
+          <img src="" alt="" class="workitem">
+          <img src="" alt="" class="workitem">
+        </div>
       </div>
-      <div class="faces">
+      <div class="faces pageitem">
 
       </div>
-      <div class="contact">
+      <div class="contact pageitem">
 
       </div>
     </main>
