--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         <h2 class="title">Our Work</h2>
         <p>We haven't got much to look at, at this moment in time! Here are some snapshots of a previous website we devloped with OCD Studio for a company called <a href="https://nubreedhotels.com/" target="_blank"  rel="noreferrer noopener">Nubreed Hotels. </a>(Click the link to see the full site.)</p>
         <div class="workimages">
-          <img src="" alt="" class="workitem">
-          <img src="" alt="" class="workitem">
+          <img src="./images/NubreedsLanding.png" alt="" class="workitem">
+          <img src="./images/MobileFirstNubreed.png" alt="" class="workitem">
           <img src="" alt="" class="workitem">
           <img src="" alt="" class="workitem">
           <img src="" alt="" class="workitem">
