--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="mask-icon" href="./images/safari-pinned-tab.svg" color="#5bbad5">
   <link rel="shortcut icon" href="./images/favicon.ico">
   <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="msapplication-config" content="./images/favicon.ico/browserconfig.xml">
+  <meta name="msapplication-config" content="./images/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="style.css">
   <title>J.F Web Studio</title>
@@ -51,11 +51,11 @@
           </p>
       </div>
       <div class="work pageitem">
-        <h2 class="title">Our Work</h2>
+        <h2 class="title our">Our Work</h2>
         <p>We haven't got much to look at, at this moment in time! Here are some snapshots of a previous website we devloped with OCD Studio for a company called <a href="https://nubreedhotels.com/" target="_blank"  rel="noreferrer noopener">Nubreed Hotels. </a>(Click the link to see the full site.)</p>
         <div class="workimages">
-          <img src="./images/NubreedsLanding.png" alt="" class="workitem">
-          <img src="./images/MobileFirstNubreed.png" alt="" class="workitem">
+          <img src="" alt="" class="workitem">
+          <img src="" alt="" class="workitem">
           <img src="" alt="" class="workitem">
           <img src="" alt="" class="workitem">
           <img src="" alt="" class="workitem">
