Our Work section

--- a/index.html
+++ b/index.html
@@ -52,18 +52,25 @@
       </div>
       <div class="work pageitem">
         <h2 class="title our">Our Work</h2>
-        <p>We haven't got much to look at, at this moment in time! Here are some snapshots of a previous website we devloped with OCD Studio for a company called <a href="https://nubreedhotels.com/" target="_blank"  rel="noreferrer noopener">Nubreed Hotels. </a>(Click the link to see the full site.)</p>
+        <p class="work-p">We haven't got much to look at, at this moment in time! 
+        <br>
+        Here are some snapshots of a previous website we developed with OCD Studio for a company called <a href="https://nubreedhotels.com/" target="_blank"  rel="noreferrer noopener">Nubreed Hotels. </a>(Click the link to see the full site.)</p>
         <div class="workimages">
-          <img src="" alt="" class="workitem">
-          <img src="" alt="" class="workitem">
-          <img src="" alt="" class="workitem">
-          <img src="" alt="" class="workitem">
-          <img src="" alt="" class="workitem">
-          <img src="" alt="" class="workitem">
+          <img src="./images/NubreedsLanding.png" alt="Nubreed Hotels landing page" class="workitem">
+          <img src="./images/MobileFirstNubreed.png" alt="Nubreed Hotels Mobile first section" class="workitem">
+          <img src="./images/NubreedsPricing.png" alt="Nubreed Hotels Pricing" class="workitem">
+          <img src="./images/NubreedStats.png" alt="Nubreed Hotels user statistics" class="workitem">
+          <img src="./images/NubreedContact.png" alt="Nubreed Hotels contact section" class="workitem">
+          <img src="./images/NubreedFooter.png" alt="Nubreed Hotels footer" class="workitem">
         </div>
       </div>
       <div class="faces pageitem">
-
+        <h2 class="title">Our Faces</h2>
+        <div class="face-item">
+          <img src="./images/final1.JPG" alt="Josh Field">
+          <h3>Josh Field</h3>
+          <p>Hi I am Josh CEO/Developer at J.F Web Studio. I like long walks, mixed martial arts and trading crypto-currencies</p>
+        </div>
       </div>
       <div class="contact pageitem">
 
