Our work image touch up

--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
         <h2 class="title our">Our Work</h2>
         <p class="work-p">We haven't got much to look at, at this moment in time! 
         <br>
-        Here are some snapshots of a previous website we developed with OCD Studio for a company called <a href="https://nubreedhotels.com/" target="_blank"  rel="noreferrer noopener">Nubreed Hotels. </a>(Click the link to see the full site.)</p>
+        Here are some snapshots of a previous website we developed with OCD Studio for a company called <a href="https://nubreedhotels.com/" target="_blank"  rel="noreferrer noopener">Nubreed Hotels. </a>
+        <br>
+        (Click the link to see the full site.)</p>
+        <p class="work-p-small">
+          Hover over images for a better view.
+        </p>
         <div class="workimages">
           <img src="./images/NubreedsLanding.png" alt="Nubreed Hotels landing page" class="workitem">
           <img src="./images/MobileFirstNubreed.png" alt="Nubreed Hotels Mobile first section" class="workitem">
