Our faces section

--- a/index.html
+++ b/index.html
@@ -70,11 +70,13 @@
         </div>
       </div>
       <div class="faces pageitem">
-        <h2 class="title">Our Faces</h2>
+        <h2 class="title face-title">Our Faces</h2>
         <div class="face-item">
-          <img src="./images/final1.JPG" alt="Josh Field">
+          <img src="./images/final2.JPG" alt="Josh Field">
           <h3>Josh Field</h3>
-          <p>Hi I am Josh CEO/Developer at J.F Web Studio. I like long walks, mixed martial arts and trading crypto-currencies</p>
+          <p>Hi I am Josh CEO/Developer at J.F Web Studio. I like long walks, mixed martial arts and trading crypto-currencies.
+          <br>
+          I founded The company in 2020 with the idea to deliver web services to a new standard, esentially as a whole our company is all about giving the customer the best expierence possible when creating  their website.</p>
         </div>
       </div>
       <div class="contact pageitem">
