Our faces section styling

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="#">Our Work</a>
         <a href="#">Our Faces</a>
         <a href="#">Contact</a>
-        <a class="kickoff" href="mailto:joshua.mclelland2@yahoo.com">Book A Kick Off</a>
+        <a class="kickoff" href="mailto:joshua.mclelland2@yahoo.com" target="_blank"  rel="noreferrer noopener">Book A Kick Off</a>
       </nav>
     </header>
     <main>
@@ -80,7 +80,12 @@
         </div>
       </div>
       <div class="contact pageitem">
-
+        <h2 class="title contact">Contact Us</h2>
+        <img src="" alt="">
+        <h3>Contact us by email whatsapp or by phone:</h3>
+        <a href="mailto:joshua.mclelland2@yahoo.com" target="_blank"  rel="noreferrer noopener">Email Us</a>
+        <a href="https://wa.me/message/IPBY4N633GEOL1" target="_blank"  rel="noreferrer noopener">Whatsapp Us</a>
+        <h3>Or call us here: 07484661594</h3>
       </div>
     </main>
     <footer>
