Our face image fix

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="faces pageitem">
         <h2 class="title face-title">Our Faces</h2>
         <div class="face-item">
-          <img src="./images/final2.JPG" alt="Josh Field">
+          <img src="./images/final2.jpg" alt="Josh Field">
           <h3>Josh Field</h3>
           <p>Hi I am Josh CEO/Developer at J.F Web Studio. I like long walks, mixed martial arts and trading crypto-currencies.
           <br>
