--- a/index.html
+++ b/index.html
@@ -80,15 +80,21 @@
         </div>
       </div>
       <div class="contact pageitem">
-        <h2 class="title contact">Contact Us</h2>
-        <img src="" alt="">
-        <h3>Contact us by email whatsapp or by phone:</h3>
-        <a href="mailto:joshua.mclelland2@yahoo.com" target="_blank"  rel="noreferrer noopener">Email Us</a>
-        <a href="https://wa.me/message/IPBY4N633GEOL1" target="_blank"  rel="noreferrer noopener">Whatsapp Us</a>
-        <h3>Or call us here: 07484661594</h3>
+        <h2 class="title contact-us">Contact Us</h2>
+        <p class="we-have">We have a few ways to get in touch and we'll do our best to reply as quickly as possible.</p>
+        <img src="./images/RoboPhone.png" alt="A Robot phone">
+        <div class="contact-right">
+          <h3>Contact us by email whatsapp or by phone!</h3>
+          <br>
+          <a href="mailto:joshua.mclelland2@yahoo.com" target="_blank"  rel="noreferrer noopener" class="email contact-button">Email Us</a>
+          <a href="https://wa.me/message/IPBY4N633GEOL1" target="_blank"  rel="noreferrer noopener" class="whatsapp contact-button">Whatsapp Us</a>
+          <br>
+          <h3>Or call us on: 07484661594</h3>
+        </div>
       </div>
     </main>
     <footer>
+      <img src="./images/footergraphic.png" alt="">
 
     </footer>
   </div>
