Minor touch ups

--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
     </main>
     <footer>
       <img src="./images/footergraphic.png" alt="">
+      <div class="logo">
+        <img src="./images/LogoPurple.png" alt="">
+      </div>
 
     </footer>
   </div>
