--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           <img src="./images/NubreedContact.png" alt="Nubreed Hotels contact section" class="workitem">
           <img src="./images/NubreedFooter.png" alt="Nubreed Hotels footer" class="workitem">
         </div>
+        <p class="work-p">More will be added at a later date so keep an eye out for updates.</p>
       </div>
       <div class="faces pageitem">
         <h2 class="title face-title">Our Faces</h2>
@@ -94,11 +95,23 @@
       </div>
     </main>
     <footer>
-      <img src="./images/footergraphic.png" alt="">
+      <img src="./images/footergraphic.png" alt="" class="footer-img">
       <div class="logo">
         <img src="./images/LogoPurple.png" alt="">
+        <h2 class="title foot-logo">Web Studio</h2>
       </div>
-
+      <div class="useful-links">
+        <h3>Some useful links:</h3>
+        <ul>
+          <li><a href="">LinkedIn</a></li>
+          <li><a href="">Fiverr</a></li>
+          <li><a href="">Github</a></li>
+          <li><a href="">Whatsapp</a></li>
+        </ul>
+      </div>
+      <div class="copyrite">
+        <h5>Made by J.F Web Studio &copy;</h5>
+      </div>
     </footer>
   </div>
 </body>
