desktop version complete

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <h2 class="title">Web <strong>Studio</strong></h2>
       </div>
       <nav>
-        <a href="#">About Us</a>
-        <a href="#">Our Work</a>
-        <a href="#">Our Faces</a>
-        <a href="#">Contact</a>
+        <a href="#AboutUs">About Us</a>
+        <a href="#OurWork">Our Work</a>
+        <a href="#OurFaces">Our Faces</a>
+        <a href="#Contact">Contact</a>
         <a class="kickoff" href="mailto:joshua.mclelland2@yahoo.com" target="_blank"  rel="noreferrer noopener">Book A Kick Off</a>
       </nav>
     </header>
@@ -35,6 +35,7 @@
       <div class="banner pageitem">
         <h1>Connecting you to the world wide web!</h1>
       </div>
+      <div id="AboutUs"></div>
       <div class="about">
           <h2 class="title us">About Us</h2>
           <p class="weAre">We are a network of freelance developers dedicated to delivering high-end clean cut websites. 
@@ -50,6 +51,7 @@
           We Create.</strong>
           </p>
       </div>
+      <div id="OurWork"></div>
       <div class="work pageitem">
         <h2 class="title our">Our Work</h2>
         <p class="work-p">We haven't got much to look at, at this moment in time! 
@@ -70,6 +72,7 @@
         </div>
         <p class="work-p">More will be added at a later date so keep an eye out for updates.</p>
       </div>
+      <div id="OurFaces"></div>
       <div class="faces pageitem">
         <h2 class="title face-title">Our Faces</h2>
         <div class="face-item">
@@ -80,16 +83,18 @@
           I founded The company in 2020 with the idea to deliver web services to a new standard, esentially as a whole our company is all about giving the customer the best expierence possible when creating  their website.</p>
         </div>
       </div>
+      <div id="Contact"></div>
       <div class="contact pageitem">
         <h2 class="title contact-us">Contact Us</h2>
         <p class="we-have">We have a few ways to get in touch and we'll do our best to reply as quickly as possible.</p>
         <img src="./images/RoboPhone.png" alt="A Robot phone">
         <div class="contact-right">
-          <h3>Contact us by email whatsapp or by phone!</h3>
+          <h3>Contact us by Email, Whatsapp, and Fiverr!</h3>
           <br>
           <a href="mailto:joshua.mclelland2@yahoo.com" target="_blank"  rel="noreferrer noopener" class="email contact-button">Email Us</a>
           <a href="https://wa.me/message/IPBY4N633GEOL1" target="_blank"  rel="noreferrer noopener" class="whatsapp contact-button">Whatsapp Us</a>
           <br>
+          <a href="https://www.fiverr.com/share/ovYvQL" target="_blank"  rel="noreferrer noopener" class="fiver-button">Fiverr</a>
           <h3>Or call us on: 07484661594</h3>
         </div>
       </div>
@@ -103,10 +108,10 @@
       <div class="useful-links">
         <h3>Some useful links:</h3>
         <ul>
-          <li><a href="">LinkedIn</a></li>
-          <li><a href="">Fiverr</a></li>
-          <li><a href="">Github</a></li>
-          <li><a href="">Whatsapp</a></li>
+          <li><a href="https://www.linkedin.com/in/josh-mcfield-366875222/" target="_blank"  rel="noreferrer noopener">LinkedIn</a></li>
+          <li><a href="https://www.fiverr.com/joshfieldwebdev/create-your-online-blog-or-portfolio" target="_blank"  rel="noreferrer noopener">Fiverr</a></li>
+          <li><a href="https://github.com/joshua-mcfield99" target="_blank"  rel="noreferrer noopener">Github</a></li>
+          <li><a href="https://wa.me/message/IPBY4N633GEOL1" target="_blank"  rel="noreferrer noopener">Whatsapp</a></li>
         </ul>
       </div>
       <div class="copyrite">
