Large screen styling

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="face-item">
           <img src="./images/final2.jpg" alt="Josh Field">
           <h3>Josh Field</h3>
-          <p>Hi I am Josh CEO/Developer at J.F Web Studio. I like long walks, mixed martial arts and trading crypto-currencies.
+          <p>Hi I am Josh CEO/Developer at J.F Web Studio. I like long walks, mixed martial arts and trading crypto-currencies. I have completed several courses in website development and have been working for myself just over a year now.
           <br>
           I founded The company in 2020 with the idea to deliver web services to a new standard, esentially as a whole our company is all about giving the customer the best expierence possible when creating  their website.</p>
         </div>
