mobile version plus hamburger menu

--- a/index.html
+++ b/index.html
@@ -23,12 +23,26 @@
         <img src="images/LogoLightBlue.png" alt="Logo">
         <h2 class="title">Web <strong>Studio</strong></h2>
       </div>
-      <nav>
+      <nav class="desktop">
         <a href="#AboutUs">About Us</a>
         <a href="#OurWork">Our Work</a>
         <a href="#OurFaces">Our Faces</a>
         <a href="#Contact">Contact</a>
         <a class="kickoff" href="mailto:joshua.mclelland2@yahoo.com" target="_blank"  rel="noreferrer noopener">Book A Kick Off</a>
+      </nav>
+      <nav class="mobile">
+        <div class='mobile-nav' id="menuToggle">
+          <input type="checkbox" />
+          <span></span>
+          <span></span>
+          <span></span>
+          <ul id="menu">
+              <a href="#AboutUs"><li >About Us</li></a>
+              <a href="#OurWork"><li>Our Work</li></a>
+              <a href="#OurFaces"><li>Our Faces</li></a>
+              <a href="#Contact"><li>Contact</li></a>
+          </ul>
+          </div>
       </nav>
     </header>
     <main>
